# skate-spots

./: .gitignore  CLAUDE.md  DOCUMENTATION_UPDATES.md  Makefile  README.md  THEME_SUNSET_SKATEBOARDING.md  THEME_VISUAL_GUIDE.md  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  take_screenshot.py  theme_preview.html
.devcontainer/: devcontainer.json
.github/: CODEX.instructions.md  claude.yml
.github/workflows/: ci.yml
accounts/: admin.py  authentication.py  forms.py  frontend_views.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
alembic/: env.py
alembic/versions/: 0001_create_skate_spots_table.py  0002_add_user_authentication.py  0003_add_ratings_table.py  0003_add_spot_ratings.py  0004_add_favorite_spots.py  0005_add_spot_photos.py  0006_add_file_metadata_to_spot_photos.py  0007_add_spot_comments.py  0008_add_user_profile_fields.py  0009_add_spot_checkins.py  0009_add_spot_sessions.py  0009_add_user_follows.py  0010_add_activity_feed.py  0011_add_spot_sessions.py  0012_add_notifications.py  0013_add_spot_check_ins.py  0014_add_weather_snapshots.py  c9b62210cffc_add_user_profile_fields.py
app/adapters/: weather_client.py
app/core/: config.py  dependencies.py  logging.py  logging_middleware.py  rate_limiter.py  security.py
app/db/: database.py  models.py
app/models/: activity.py  check_in.py  checkin.py  comment.py  favorite.py  follow.py  notification.py  photo.py  profile.py  rating.py  session.py  skate_spot.py  user.py  user_profile.py  weather.py
app/repositories/: __init__.py  activity_repository.py  check_in_repository.py  checkin_repository.py  comment_repository.py  favorite_repository.py  follow_repository.py  notification_repository.py  photo_repository.py  profile_repository.py  rating_repository.py  session_repository.py  skate_spot_repository.py  user_profile_repository.py  user_repository.py  weather_repository.py
app/routers/: activity.py  auth.py  check_ins.py  checkins.py  comments.py  favorites.py  follows.py  frontend.py  geocoding.py  notifications.py  photos.py  profile.py  ratings.py  sessions.py  skate_spots.py
app/services/: __init__.py  activity_service.py  check_in_service.py  checkin_service.py  comment_service.py  favorite_service.py  follow_service.py  geocoding_service.py  notification_service.py  photo_service.py  photo_storage.py  profile_service.py  rating_service.py  session_service.py  skate_spot_service.py  user_profile_service.py  weather_service.py
app/utils/: __init__.py  filters.py
ratings/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
ratings/migrations/: 0001_initial.py
skate_spots_project/: asgi.py  settings.py  urls.py  wsgi.py
spots/: __init__.py  admin.py  filters.py  forms.py  frontend_views.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
spots/migrations/: 0001_initial.py
static/: style.css  theme.js
templates/: base.html  error.html  feed.html  index.html  login.html  map.html  nearby.html  profile.html  rating_form.html  rating_success.html  ratings_list.html  register.html  session_detail.html  spot_card.html  spot_detail.html  spot_form.html  user_profile.html
templates/accounts/: login.html  register.html
templates/partials/: activity_feed.html  activity_item.html  checkin_form.html  checkin_section.html  comment_section.html  empty_feed.html  favorite_button.html  follow_button.html  follow_stats.html  nearby_spot_list.html  notifications_widget.html  photo_gallery.html  photo_upload_form.html  rating_section.html  session_list.html  spot_check_ins.html  spot_list.html  spot_weather.html
templates/spots/: base.html  index.html  map.html  rating_edit.html  spot_card.html  spot_detail.html  spot_form.html
tests/: README.md  conftest.py  test_api.py  test_api_endpoints.py  test_frontend_pages.py  test_models.py  test_rate_limiting.py  test_ratings.py
tests/test_adapters/: test_weather_client.py
tests/test_api/: __init__.py  test_activity.py  test_auth.py  test_auth_skate_spots.py  test_check_ins.py  test_comments.py  test_favorites.py  test_follows.py  test_frontend.py  test_geocoding.py  test_nearby_search.py  test_photos.py  test_profile.py  test_profiles.py  test_ratings.py  test_root.py  test_sessions.py  test_skate_spots.py  test_spot_validation.py  test_weather.py
tests/test_core/: test_rate_limiter.py  test_security.py
tests/test_models/: test_comment.py  test_geojson.py  test_rating.py  test_skate_spot.py  test_user.py
tests/test_repositories/: test_activity_repository.py  (+9 more)
(+28 files in other folders)
