[project]
name = "skate-spots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.1.2,<5.0",
    "email-validator>=2.3.0",
    "structlog>=24.3.0",
    "geopy>=2.4.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by line-length setting)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG002",  # Unused method argument (fixtures are intentional)
    "B017",    # Blind exception assertion (acceptable in tests)
]
"app/models/*.py" = [
    "TCH003",  # Standard library imports needed at runtime for Pydantic
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "alembic>=1.14.1",
    "ruff>=0.12.10",
    "coverage[toml]>=7.6.4",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "alembic/*",
    "tests/*",
    "main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
